# getdp

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.txt  CMakeLists.txt  CREDITS.txt  CTestConfig.cmake  ChangeLog  Makefile  README  README.txt  TODO  configure  configure.in  getdp.info  getdp.spec  variables.in
Arpack/: Makefile
Common/: CMakeLists.txt  GetDPConfig.h.in  GetDPVersion.h.in  GmshClient.h  GmshSocket.h  ListUtils.cpp  ListUtils.h  Makefile  MallocUtils.cpp  MallocUtils.h  Message.cpp  Message.h  OS.cpp  OS.h  TreeUtils.cpp  TreeUtils.h  avl.cpp  avl.h  onelab.h
DataStr/: List.c  List.h  Makefile  Malloc.c  Malloc.h  SafeIO.c  SafeIO.h  Tools.c  Tools.h  Tree.c  Tree.h  avl.c  avl.h  listman.c  listman.h  outil.c  outil.h  treeman.c  treeman.h  ualloc.c  ualloc.h
DofData/: Data_DofData.h  DofData.c  DofData.h  Graph.c  Graph.h  LinAlg.h  LinAlg_ACM.c  LinAlg_AZTEC.c  LinAlg_PETSC.c  LinAlg_SPARSKIT.c  Makefile
FMM/: Cal_FMMAnalyticalIntegral.c  Cal_FMMAnalyticalIntegral.h  Data_FMM.h  FMM_CalDTAmatrices.c  FMM_Groups.c  FMM_Operations.c  F_FMM.h  F_FMMOperations.h  F_FMM_DTA.h  Makefile  Print_FMM.c  Truncation.h
Function/: BF_Edge.c  BF_Edge_2.c  BF_Edge_3.c  BF_Edge_4.c  BF_Facet.c  BF_Function.h  BF_GroupOfEntities.c  BF_Node.c  BF_Node.h  BF_NodeXYZ.c  BF_Node_2.c  BF_Node_3.c  BF_Perpendicular.c  BF_Region.c  BF_Volume.c  Data_Function.h  F_Analytic.c  F_BiotSavart.c  F_Coord.c  F_DiscreteGeometry.c  F_ExtMath.c  F_Function.h  F_Geometry.c  F_Interpolation.c  F_Jiles.c  F_Math.c  F_Misc.c  F_MultiHar.c  F_Raytracing.c  F_Type.c  GF_Coton.c  GF_Function.h  GF_Helmholtz.c  GF_HelmholtzxForm.c  GF_Laplace.c  GF_LaplacexForm.c  HBF_Edge_2.c  HBF_Edge_3.c  HBF_Edge_4.c  HBF_Function.h  (+4 more)
Functions/: BF_Edge.cpp  BF_Edge_2.cpp  BF_Edge_3.cpp  BF_Edge_4.cpp  BF_Facet.cpp  BF_GroupOfEntities.cpp  BF_Node.cpp  BF_NodeXYZ.cpp  BF_Node_2.cpp  BF_Node_3.cpp  BF_Region.cpp  BF_Volume.cpp  CMakeLists.txt  Cal_Quantity.cpp  Cal_Quantity.h  Cal_Value.h  F.h  F_Analytic.cpp  F_Coord.cpp  F_Geometry.cpp  F_Gmsh.cpp  F_Hysteresis.cpp  F_Math.cpp  F_Misc.cpp  F_MultiHar.cpp  F_Python.cpp  F_Raytracing.cpp  GF_Helmholtz.cpp  GF_HelmholtzxForm.cpp  GF_LaplacexForm.cpp
GeoData/: Data_GeoData.h  GeoData.c  GeoData.h  GeoEntity.c  GeoEntity.h  GeoNormal.c  GeoTree.c  Makefile
Integration/: GaussLegendre.c  Gauss_Hexahedron.c  Gauss_Hexahedron.h  Gauss_Line.c  Gauss_Line.h  Gauss_Point.c  Gauss_Prism.c  Gauss_Prism.h  Gauss_Pyramid.c  Gauss_Pyramid.h  Gauss_Quadrangle.c  Gauss_Quadrangle.h  Gauss_Tetrahedron.c  Gauss_Tetrahedron.h  Gauss_Triangle.c  Gauss_Triangle.h  Makefile  NewtonCotes_Line.c  NewtonCotes_Quadrangle.c  Quadrature.h
Interface/: CMakeLists.txt  MacroManager.cpp  MacroManager.h  Makefile  ProData.cpp  ProData.h  ProDefine.cpp  ProDefine.h  ProDefines.h  ProParser.h  ProParser.l  ProParser.output  ProParser.tab.c  ProParser.tab.cpp  ProParser.tab.hpp  ProParser.y  ProParser.yy.cpp
Kernel/: BF.h  BF_Edge.cpp  BF_Edge_2.cpp  BF_Edge_3.cpp  BF_Edge_4.cpp  BF_Facet.cpp  BF_GroupOfEntities.cpp  BF_Node.cpp  BF_NodeXYZ.cpp  BF_Node_2.cpp  BF_Node_3.cpp  BF_Perpendicular.cpp  BF_Region.cpp  BF_Volume.cpp  CMakeLists.txt  Cal_AnalyticIntegration.cpp  Cal_AnalyticIntegration.h  Cal_AssembleTerm.cpp  Cal_AssembleTerm.h  Cal_GalerkinTermOfFemEquation.cpp  Cal_GalerkinTermOfFemEquation.h  Cal_GlobalTermOfFemEquation.cpp  Cal_GlobalTermOfFemEquation.h  Cal_IntegralQuantity.cpp  Cal_IntegralQuantity.h  Cal_PostQuantity.cpp  Cal_PostQuantity.h  Cal_Quantity.cpp  Cal_Quantity.h  Cal_SmallFemTermOfFemEquation.cpp  Cal_SmallFemTermOfFemEquation.h  Cal_SolutionErrorRatio.cpp  Cal_Value.cpp  Cal_Value.h  DofData.cpp  DofData.h  EigenSolve.cpp  EigenSolve.h  EigenSolve_ARPACK.cpp  EigenSolve_SLEPC.cpp  (+107 more)
Legacy/: BF.h  BF_Edge.cpp  BF_Edge_2.cpp  BF_Edge_3.cpp  BF_Edge_4.cpp  BF_Facet.cpp  BF_GroupOfEntities.cpp  BF_Node.cpp  BF_NodeXYZ.cpp  BF_Node_2.cpp  BF_Node_3.cpp  BF_Perpendicular.cpp  BF_Region.cpp  BF_Volume.cpp  CMakeLists.txt  Cal_AnalyticIntegration.cpp  Cal_AnalyticIntegration.h  Cal_AssembleTerm.cpp  Cal_AssembleTerm.h  Cal_GalerkinTermOfFemEquation.cpp  Cal_GalerkinTermOfFemEquation.h  Cal_GlobalTermOfFemEquation.cpp  Cal_GlobalTermOfFemEquation.h  Cal_IntegralQuantity.cpp  Cal_IntegralQuantity.h  Cal_PostQuantity.cpp  Cal_PostQuantity.h  Cal_Quantity.cpp  Cal_Quantity.h  Cal_SolutionErrorRatio.cpp  Cal_Value.cpp  Cal_Value.h  DofData.cpp  DofData.h  EigenSolve.cpp  EigenSolve.h  EigenSolve_ARPACK.cpp  EigenSolve_SLEPC.cpp  ExtendedGroup.cpp  ExtendedGroup.h  (+98 more)
Main/: Cal_AnalyticIntegration.c  Cal_AssembleTerm.c  Cal_GalerkinTermOfFemEquation.c  Cal_GlobalTermOfFemEquation.c  Cal_IntegralQuantity.c  Cal_Quantity.c  Cal_Quantity.h  Cal_SolidAngle.c  Cal_Value.c  Cal_Value.h  Cal_deRhamTermOfFemEquation.c  Cal_vBFxDof.c  CurrentData.h  Data_Active.h  Data_Define.h  Data_DefineE.h  Data_Element.h  Data_Numeric.h  Data_Passive.h  ExtendedGroup.c  ExtendedGroup.h  Generate_Network.c  Get_Cells.c  Get_Cells.h  Get_ConstraintOfElement.c  Get_Define.c  Get_DofOfElement.c  Get_DofOfElement.h  Get_ElementSource.c  Get_FunctionValue.c  Get_Geometry.c  Get_Geometry.h  Get_Geometry_detjac.c  GmshClient.c  GmshClient.h  Graph.c  Graph.h  Init_Problem.h  Lanczos.c  Main.c  (+23 more)
NR/: Makefile  brent.c  dsvdcmp.c  fdjac.c  fmin.c  hqr.c  lnsrch.c  lubksb.c  lubksb1.c  ludcmp.c  ludcmp1.c  mnbrak.c  newt.c  nrdefs.h  nrutil.c  nrutil.h  ran3.c
Numeric/: Adapt.c  Adapt.cpp  Adapt.h  AiryAmos.f  Amos_Airy.f  Amos_Bessel.f  Amos_F.h  Amos_Lib.f  Amos_Mach.f  Analytic_HollowCylLF.c  Analytic_SphCylLF.f  Arpack.c  Arpack_F.h  Bessel.cpp  Bessel.h  BesselAmos.f  CMakeLists.txt  EigenPar.c  EigenPar.h  EigenSolve.cpp  Integration_CLT2D.f  Lanczos.c  Legendre.c  Legendre.cpp  Legendre.h  LibAmos.f  Makefile  Numeric.c  Numeric.cpp  Numeric.h  NumericUtils.cpp  NumericUtils.h  Numeric_F.h  SphBessel.c  SphBessel.h  bessel.f  brent.c  clt2d.f  d1mach.f  dsvdcmp.c  (+18 more)
Parser/: Constant.h  GetDP.l  GetDP.tab.c  GetDP.tab.h  GetDP.y  GetDP.yy.c  Makefile  Parser.h  lex.l  lex.yy.c  yacc.y  (+2 more)
(+1684 files in other folders)
